<resources>
    <string name="app_name">ScheduleWizard</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_profile">Profile</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="search">Search</string>
    <string name="activity_name">Activity Name</string>
    <string name="activity_type">Activity Type</string>
    <string name="actions">Actions</string>
    <string name="my_notes">MY NOTES</string>
    <string name="add_note">Add Note</string>
    <string name="select_note_type">Select Note Type</string>
    <string name="note_title">Note Title</string>
    <string name="create">Create</string>
    <string name="note">Note</string>
    <string name="note_details">Note Details</string>
    <string name="ok">Ok</string>
</resources>